; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_enduser_setup.c_enduser_setup_stop.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_enduser_setup.c_enduser_setup_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@.str = private unnamed_addr constant [19 x i8] c"enduser_setup_stop\00", align 1
@manual = common dso_local global i32 0, align 4
@state = common dso_local global %struct.TYPE_2__* null, align 8
@STATION_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @enduser_setup_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enduser_setup_stop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @ENDUSER_SETUP_DEBUG(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @manual, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = call i32 (...) @enduser_setup_ap_stop()
  br label %8

8:                                                ; preds = %6, %1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %10 = icmp ne %struct.TYPE_2__* %9, null
  br i1 %10, label %11, label %28

11:                                               ; preds = %8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %11
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %28, label %21

21:                                               ; preds = %16
  %22 = load i32, i32* @STATION_MODE, align 4
  %23 = call i32 (...) @wifi_get_opmode()
  %24 = or i32 %22, %23
  %25 = call i32 @wifi_set_opmode(i32 %24)
  %26 = call i32 (...) @wifi_station_connect()
  %27 = call i32 (...) @enduser_setup_connected_callback()
  br label %28

28:                                               ; preds = %21, %16, %11, %8
  %29 = call i32 (...) @enduser_setup_dns_stop()
  %30 = call i32 (...) @enduser_setup_http_stop()
  %31 = call i32 (...) @enduser_setup_free()
  ret i32 0
}

declare dso_local i32 @ENDUSER_SETUP_DEBUG(i8*) #1

declare dso_local i32 @enduser_setup_ap_stop(...) #1

declare dso_local i32 @wifi_set_opmode(i32) #1

declare dso_local i32 @wifi_get_opmode(...) #1

declare dso_local i32 @wifi_station_connect(...) #1

declare dso_local i32 @enduser_setup_connected_callback(...) #1

declare dso_local i32 @enduser_setup_dns_stop(...) #1

declare dso_local i32 @enduser_setup_http_stop(...) #1

declare dso_local i32 @enduser_setup_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
